# syllabus-extract

./: .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: run.yaml
data/: 2022.csv  2023.csv  2024.csv  department.json  full_department.jsonc  unofficial.json
extractor/: __init__.py  extract.py  utility.py
