[tool.poetry]
name = "syllabus-extract"
version = "0.1.0"
description = ""
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "syllabus_extract"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.25.2"
pandas = "^1.4.4"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
