[tool.poetry]
name = "syllabus-extract"
version = "0.1.0"
description = ""
authors = ["yashikota <52403688+yashikota@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.42.0"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
